--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
 .top-bar {
     height: 45px;
     border-bottom: 1px solid rgba(53, 94, 252, .07);
-    position: relative; 
+    position: relative;
     z-index: auto;
     background-color: white;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -99,13 +99,60 @@ h6,
         margin-top: 120px;
     }
 }
- /* Carousel start  */
+
+/* Carousel start  */
 .carousel-inner .carousel-item img {
-  width: 100%;
-  height: 480px; 
-  object-fit: cover; 
-  display: block;
-  margin: 0 auto; 
+    width: 100%;
+    height: 480px;
+    object-fit: cover;
+    display: block;
+    margin: 0 auto;
 }
- /* Carousel End  */
- 
+
+/* Carousel End  */
+
+/* fixed image */
+.carousel-caption {
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: start;
+    z-index: 1;
+}
+
+.carousel-control-prev,
+.carousel-control-next {
+    width: 3rem;
+}
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+    width: 3rem;
+    height: 3rem;
+    background-color: var(--primary);
+    border: 10px solid var(--primary);
+}
+
+.carousel-control-prev-icon {
+    border-radius: 0 3rem 3rem 0;
+}
+
+.carousel-control-next-icon {
+    border-radius: 3rem 0 0 3rem;
+}
+@media (max-width: 768px) {
+    #header-carousel .carousel-item {
+        position: relative;
+        min-height: 450px;
+    }
+    
+    #header-carousel .carousel-item img {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+}
